<resources>
    <string name="app_name">MadLevel5Task2</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="not_valid_game">Fields must not be empty and a valid date must be filled in</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hint_title">Title</string>
    <string name="hint_platform">Platform</string>
    <string name="hint_day">Day</string>
    <string name="hint_month">Month</string>
    <string name="hint_year">Year</string>
    <string name="release_date">Release:</string>
    <string name="delete_games">Delete Games</string>
</resources>