<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/cardview_dark_background"
    android:theme="@style/Theme.MaterialComponents.Light"
    tools:context=".ui.AddGame">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/saveGamesFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:background="#FFFFFF"
        android:backgroundTint="@color/colorAccent"
        app:backgroundTint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_save" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:background="#FFFFFF">


        <EditText
            android:id="@+id/etTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_title"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etPlatform"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_platform"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etTitle" />

        <EditText
            android:id="@+id/etYear"
            android:layout_width="133dp"
            android:layout_height="45dp"
            android:ems="10"
            android:hint="@string/hint_year"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/etMonth"
            app:layout_constraintTop_toBottomOf="@+id/etPlatform" />

        <EditText
            android:id="@+id/etDay"
            android:layout_width="132dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_day"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            app:layout_constraintEnd_toStartOf="@+id/etMonth"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPlatform" />

        <EditText
            android:id="@+id/etMonth"
            android:layout_width="132dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_month"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toStartOf="@+id/etYear"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/etDay"
            app:layout_constraintTop_toBottomOf="@+id/etPlatform" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--    </LinearLayout>-->
</com.google.android.material.card.MaterialCardView>